<resources>
    <string name="app_name">웹 브라우저</string>

    <!-- 공통 -->
    <string name="common_ok">확인</string>
    <string name="common_cancel">취소</string>
    <string name="common_notice">알림</string>
    <string name="common_key">키</string>
    <string name="common_cookie">쿠키</string>
    <string name="cancel">취소</string>
    <string name="ok">확인</string>
    <string name="delete">삭제</string>
    <string name="delete_all_bookmark">즐겨찾기 모두 삭제</string>
    <string name="share">공유</string>
    <string name="search">검색</string>
    <string name="history_record">방문기록</string>
    <string name="function">함수</string>
    <string name="parameter">파라미터</string>
    <string name="confirm_delete_all">전체삭제 하시겠습니까?</string>
    
    <!-- 메인 -->
    <string name="url_hint">검색어 또는 URL 입력</string>

    <!-- 웹뷰 에러메지시 -->
    <string name="webview_error_network">네트워크 상태가 원할하지 않습니다.</string>
    <string name="webview_error_code">에러가 발생하였습니다. (에러코드 : %s)</string>
    <string name="webview_error_http">에러가 발생하였습니다. (상태코드 : %s)</string>
    <string name="webview_error_ssl">SSL 인증서 오류가 발생하였습니다.\n계속 진행 하시겠습니까?</string>

    <!-- 권한 -->
    <string name="perm_deny_setting_desc">단말의 설정 화면에서 권한을 다시 설정하시겠습니까?</string>

    <!-- 툴바 > 더보기 메뉴 -->
    <string name="toolbar_more_cookie">쿠키</string>
    <string name="toolbar_more_printer">인쇄</string>
    <string name="toolbar_more_pc_mode">데스크톱 버전</string>
    <string name="toolbar_more_mobile_mode">모바일 버전</string>
    <string name="toolbar_more_history">방문한 페이지</string>
    <string name="toolbar_more_console">콘솔로그</string>
    <string name="toolbar_more_webview">웹킷로그</string>
    <string name="toolbar_more_js_execute">자바스크립트 실행</string>
    <string name="toolbar_more_html_element">HTML 소스보기</string>
    <string name="toolbar_more_bookmark">즐겨찾기</string>
    <string name="toolbar_more_storage">Storage</string>
    <string name="toolbar_more_setting">설정</string>

    <string name="toolbar_more_cookie_desc">저장된 쿠키 %d개</string>
    <string name="toolbar_more_history_desc1">오늘 웹페이지 %d개 방문함</string>
    <string name="toolbar_more_history_desc2">어제 웹페이지 %d개 방문함</string>

    <!-- 쿠키 -->
    <string name="cookie_add">쿠키 추가</string>

    <!-- 인덱스 페이지 -->
    <string name="index_hint">웹사이트 입력</string>

    <!-- 메인 페이지 -->
    <string name="file_select_title">파일선택</string>

    <!-- 자바스크립트 입력 -->
    <string name="guide_js_input">스크립트를 입력하세요</string>

</resources>
