<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:paddingLeft="15dp"
    android:paddingBottom="15dp"
    android:orientation="vertical"
    android:background="@drawable/dialog_common_bg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- 타이틀 -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/cookie_add"
                android:textColor="@color/txtcolor"
                android:textSize="17dp"
                android:textStyle="bold"
                android:layout_marginRight="15dp"
                android:background="@drawable/cookie_add_title_bg"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="50dp" />
        </LinearLayout>


        <ImageButton
            android:src="@drawable/ic_cancel"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:padding="4dp"
            android:layout_marginRight="7dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>


    <LinearLayout
        android:orientation="vertical"
        android:paddingTop="11dp"
        android:paddingLeft="8dp"
        android:paddingRight="23dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- 키, 값 입력 -->
        <TextView
            android:text="@string/common_key"
            android:textSize="17dp"
            android:textColor="#5c5c5c"
            android:layout_marginBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:textSize="19dp"
            android:textColor="@color/black"
            android:layout_marginBottom="15dp"
            android:background="@drawable/cookie_add_edit_bg"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <TextView
            android:text="@string/common_cookie"
            android:textSize="17dp"
            android:textColor="#5c5c5c"
            android:layout_marginBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:textSize="19dp"
            android:textColor="@color/black"
            android:layout_marginBottom="20dp"
            android:background="@drawable/cookie_add_edit_bg"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <!-- 버튼 -->
        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/cookie_add_btn_bg"
            android:backgroundTint="@color/btn_cookie_add"
            app:backgroundTint="@color/btn_cookie_add"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:text="@string/common_ok"
            android:textColor="@color/white"
            android:textSize="17dp"
            style="?android:attr/borderlessButtonStyle"/>

    </LinearLayout>

</LinearLayout>