<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dialog_common_bg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text1"
        android:text="@string/guide_js_input"
        android:textSize="16dp"
        android:textColor="@color/txt_black"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etScript"
        android:text="window.innerHeight;"
        android:textSize="14dp"
        android:textColor="@color/txt_black"
        android:layout_marginTop="17dp"
        android:lines="12"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="top"
        android:background="@drawable/bg_r4_fff_st1_ddd"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:inputType="textMultiLine"
        android:includeFontPadding="false"
        app:layout_constraintTop_toBottomOf="@id/text1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/etScript"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="21dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            android:text="@string/cancel"
            android:textColor="@color/btn_f76252"
            android:textSize="15dp"
            android:background="@drawable/bg_r4_fff_st1_f76252"
            style="?android:attr/borderlessButtonStyle"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnOk"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/bg_r4_f76252"
            style="?android:attr/borderlessButtonStyle"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>